bst-java/OpenBST : Update tutorial, formatting and organize imports
As well as some findbugs fixing